@@ -258,6 +258,7 @@ describe ArangoDB do
         doc.parsed_response['id'].should eq(@cid)
         doc.parsed_response['name'].should eq(@cn)
         doc.parsed_response['status'].should eq(3)
+        doc.parsed_response['doCompact'].should eq(true)
         doc.parsed_response['waitForSync'].should eq(true)
         doc.parsed_response['isVolatile'].should eq(false)
         doc.parsed_response['isSystem'].should eq(false)
@@ -944,6 +945,7 @@ describe ArangoDB do
         doc.parsed_response['id'].should eq(cid)
         doc.parsed_response['name'].should eq(cn)
         doc.parsed_response['status'].should eq(3)
+        doc.parsed_response['doCompact'].should eq(true)
         doc.parsed_response['waitForSync'].should eq(true)
         doc.parsed_response['isVolatile'].should eq(false)
         doc.parsed_response['isSystem'].should eq(false)
@@ -961,6 +963,24 @@ describe ArangoDB do
         doc.parsed_response['id'].should eq(cid)
         doc.parsed_response['name'].should eq(cn)
         doc.parsed_response['status'].should eq(3)
+        doc.parsed_response['doCompact'].should eq(true)
+        doc.parsed_response['waitForSync'].should eq(false)
+        doc.parsed_response['isVolatile'].should eq(false)
+        doc.parsed_response['isSystem'].should eq(false)
+        doc.parsed_response['keyOptions']['type'].should eq("traditional")
+        doc.parsed_response['keyOptions']['allowUserKeys'].should eq(true)
+        
+        body = "{ \"doCompact\" : false }"
+        doc = ArangoDB.log_put("#{prefix}-identifier-properties-no-compact", cmd, :body => body)
+
+        doc.code.should eq(200)
+        doc.headers['content-type'].should eq("application/json; charset=utf-8")
+        doc.parsed_response['error'].should eq(false)
+        doc.parsed_response['code'].should eq(200)
+        doc.parsed_response['id'].should eq(cid)
+        doc.parsed_response['name'].should eq(cn)
+        doc.parsed_response['status'].should eq(3)
+        doc.parsed_response['doCompact'].should eq(false)
         doc.parsed_response['waitForSync'].should eq(false)
         doc.parsed_response['isVolatile'].should eq(false)
         doc.parsed_response['isSystem'].should eq(false)
@@ -1048,6 +1068,7 @@ describe ArangoDB do
         doc.headers['content-type'].should eq("application/json; charset=utf-8")
         doc.parsed_response['error'].should eq(false)
         doc.parsed_response['code'].should eq(200)
+        doc.parsed_response['doCompact'].should eq(true)
         doc.parsed_response['waitForSync'].should eq(false)
         doc.parsed_response['isVolatile'].should eq(true)
         doc.parsed_response['keyOptions']['type'].should eq("traditional")
@@ -1078,6 +1099,7 @@ describe ArangoDB do
         doc.parsed_response['id'].should eq(cid)
         doc.parsed_response['name'].should eq(cn)
         doc.parsed_response['status'].should eq(3)
+        doc.parsed_response['doCompact'].should eq(true)
         doc.parsed_response['waitForSync'].should eq(true)
         doc.parsed_response['isVolatile'].should eq(false)
         doc.parsed_response['keyOptions']['type'].should eq("traditional")
