@@ -356,6 +356,12 @@ typedef struct TRI_v8_global_s {
   v8::Persistent<v8::String> CookiesKey;
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief "doCompact" key name
+////////////////////////////////////////////////////////////////////////////////
+
+  v8::Persistent<v8::String> DoCompactKey;
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief "domain" key
 ////////////////////////////////////////////////////////////////////////////////
 
